Refactor to completely wiring the todo app together by navigatorjs stateViewMap

--- a/public/js/templates/todo/FooterView.html
+++ b/public/js/templates/todo/FooterView.html
@@ -6,10 +6,10 @@
 		<a class="selected" href="#todos">All</a>
 	</li>
 	<li>
-		<a href="#todos/active">Active</a>
+		<a href="#todo/active">Active</a>
 	</li>
 	<li>
-		<a href="#todos/completed">Completed</a>
+		<a href="#todo/completed">Completed</a>
 	</li>
 </ul>
 <button id="clear-completed">
