--- a/public/js/templates/todo/FooterView.html
+++ b/public/js/templates/todo/FooterView.html
@@ -3,13 +3,13 @@
 	</span>
 <ul id="filters">
 	<li>
-		<a class="selected" href="#todos">All</a>
+		<a class="selected" href="#/todo">All</a>
 	</li>
 	<li>
-		<a href="#todo/active">Active</a>
+		<a href="#/todo/active">Active</a>
 	</li>
 	<li>
-		<a href="#todo/completed">Completed</a>
+		<a href="#/todo/completed">Completed</a>
 	</li>
 </ul>
 <button id="clear-completed">
