Footer navigation and selection of buttons

--- a/public/js/templates/todo/FooterView.html
+++ b/public/js/templates/todo/FooterView.html
@@ -3,13 +3,13 @@
 	</span>
 <ul id="filters">
 	<li>
-		<a class="selected" href="#/todo">All</a>
+		<a class="all" href="#/todo/">All</a>
 	</li>
 	<li>
-		<a href="#/todo/active">Active</a>
+		<a class="active" href="#/todo/active/">Active</a>
 	</li>
 	<li>
-		<a href="#/todo/completed">Completed</a>
+		<a class="completed" href="#/todo/completed/">Completed</a>
 	</li>
 </ul>
 <button id="clear-completed">
