Updating todo stats (remaining and complete count)

--- a/public/js/templates/todo/FooterView.html
+++ b/public/js/templates/todo/FooterView.html
@@ -1,5 +1,5 @@
 <span id="todo-count">
-		<strong>{{remaining}}</strong> {{plural "item" remaining}} left
+		<strong>{{remainingCount}}</strong> {{plural "item" remainingCount}} left
 	</span>
 <ul id="filters">
 	<li>
@@ -13,5 +13,5 @@
 	</li>
 </ul>
 <button id="clear-completed">
-	Clear completed ({{completed}})
+	Clear completed ({{completeCount}})
 </button>
