Toggle all complete/active

--- a/public/js/templates/todo/TodoListView.html
+++ b/public/js/templates/todo/TodoListView.html
@@ -1,4 +1,4 @@
-<input id="toggle-all" type="checkbox" {{#todos.allComplete}}checked="checked"{{/todos.allComplete}}>
+<input id="toggle-all" type="checkbox" {{#allCompleted}}checked="checked"{{/allCompleted}}>
 <label for="toggle-all">Mark all as complete</label>
 <ul id="todo-list">
 {{#filteredTodos}}
