--- a/public/js/templates/todo/TodoListView.html
+++ b/public/js/templates/todo/TodoListView.html
@@ -8,7 +8,7 @@
 			<label>{{title}}</label>
 			<button class="destroy"></button>
 		</div>
-		<input class="edit" type="text" value="{{text}}">
+		<input class="edit" type="text" value="{{title}}">
 	</li>
 {{/filteredTodos}}
 </ul>
