--- a/public/js/templates/HomeView.html
+++ b/public/js/templates/HomeView.html
@@ -1,4 +1,4 @@
-<img src="images/BiggerBoat.png" />
+<div class="biggerBoat"></div>
 <h1>Welcome</h1>
 <p>
 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper, leo in interdum fermentum, justo mi scelerisque nibh, blandit facilisis nulla purus at nisl. Nullam mattis libero lorem, in ultrices risus blandit quis. Nullam pulvinar quis massa sed fringilla. Donec sit amet rutrum enim, a rutrum lectus.
